--- a/frontend/src/Pages/DestinationDetail.css
+++ b/frontend/src/Pages/DestinationDetail.css
@@ -1,16 +1,5 @@
 /* DestinationDetail.css */
 
-.loading-spinner {
-    /* Add your loading spinner styles or use a library like react-spinners */
-}
-
-/* .destination-card {
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 20px;
-} */
 
 .destination-card h2 {
     position: absolute;
@@ -38,7 +27,7 @@
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 600;
-    font-size: 48px;
+    font-size: 40px;
     line-height: 64px;
     color: #000000;
 }
@@ -60,7 +49,7 @@
     color: #000000;
 }
 
-.destination-card .eiffel_name {
+.destination-card .img1_name {
     position: absolute;
     width: 730px;
     height: 43px;
@@ -75,7 +64,7 @@
     color: #000000;
 }
 
-.destination-card .ntrdm_name {
+.destination-card .img2_name {
     /* Notre-Dame Cathedral */
 
     position: absolute;
@@ -97,7 +86,7 @@
 
 }
 
-.destination-card .eiffel_text {
+.destination-card .img1_text {
     position: absolute;
     width: 730px;
     height: 280px;
@@ -114,7 +103,7 @@
     color: #000000;
 }
 
-.destination-card .ntrdm_text {
+.destination-card .img2_text {
     /* Notre-Dame Cathedral, a masterpiece of French Gothic architecture, is a cultural and religious landmark situated on the Île de la Cité. Construction began in the 12th century, and the cathedral has witnessed centuries of history. Known for its impressive flying buttresses, intricate gargoyles, and stunning rose windows, Notre-Dame is a symbol of Parisian heritage. While the cathedral endured a devastating fire in 2019, ongoing restoration efforts are working to restore this historical gem to its former glory. */
 
     position: absolute;
@@ -136,21 +125,19 @@
 }
 
 
-.destination-card .imgParis {
+.destination-card .imgMain {
     /* paris 1 */
 
     position: absolute;
-    width: 828px;
+    width: 810px;
     height: 525px;
     left: 450px;
     top: 251px;
-
-    /* background: url(paris.jpg); */
-    border-radius: 24px;
+    border-radius: 27px;
 
 }
 
-.destination-card .imgEiffel {
+.destination-card .img1 {
     /* eiffel 1 */
 
     position: absolute;
@@ -163,7 +150,7 @@
     border-radius: 27px;
 }
 
-.destination-card .imgNtrdm {
+.destination-card .img2 {
     /* notre_dame 1 */
 
     position: absolute;
@@ -184,7 +171,7 @@
     width: 343px;
     height: 187px;
     left: 79px;
-    top: 407px;
+    top: 446px;
 
     font-family: 'Playfair Display';
     font-style: normal;
@@ -193,6 +180,7 @@
     line-height: 27px;
 
     color: #000000;
+
 
 
 }
@@ -224,7 +212,7 @@
     text-decoration: underline;
 }
 
-.destination-card .luvr_name {
+.destination-card .img3_name {
     /* Louvre Museum */
 
     position: absolute;
@@ -245,7 +233,7 @@
 
 }
 
-.destination-card .luvr_text {
+.destination-card .img3_text {
     /* The Louvre Museum, housed in the Louvre Palace, is the largest art museum globally and a historic monument in Paris. Home to an extensive collection of art and artifacts, the Louvre showcases works from diverse cultures and time periods. Among its most famous exhibits are Leonardo da Vinci's "Mona Lisa," the ancient Greek statue "Venus de Milo," and the grand painting "Liberty Leading the People" by Eugène Delacroix. The Louvre's vast galleries span from ancient civilizations to the Renaissance, making it a captivating destination for art enthusiasts and history lovers alike. */
 
     position: absolute;
@@ -266,7 +254,7 @@
 
 }
 
-.destination-card .imgLuvr {
+.destination-card .img3 {
     /* louvre 1 */
 
     position: absolute;
